k8s/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: grafana
  name: grafana
  namespace: default
spec:
  rules:
    - host: grafana.atorma.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.atorma.fi
      secretName: grafana-certificate-secret
